--- a/index2.html
+++ b/index2.html
@@ -15,16 +15,16 @@
     <header>
         <img src="assets2/logo-ruche.png" alt="logo de la ruche">
         <nav>
-            <li><a href="">Nos produits</a></li>
-            <li><a href="">Notre savoir faire</a></li>
-            <li><a href="">Notre histoire</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#nos produits">Nos produits</a></li>
+            <li><a href="#bienfaits">Notre savoir faire</a></li>
+            <li><a href="#nos clients">Notre histoire</a></li>
+            <li><a href="#nous trouver">Contact</a></li>
         </nav>
     </header>
 
 <main>
     <!-- Hero -->
-    <section>
+    <section id="Hero">
         <h1>Miels traditionnel respectueux</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
         Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
@@ -43,7 +43,7 @@
     </section>
 
     <!-- Engagements -->
-    <section>
+    <section id="engagements">
         <h3>Nos engagements</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
@@ -62,7 +62,7 @@
     
 
     <!-- Bienfaits -->
-    <section>
+    <section id="bienfaits">
         <h3>Nos bienfaits</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
@@ -80,7 +80,7 @@
     </section>
 
     <!-- Produits -->
-    <section>
+    <section id="nosProduits">
         <h3>Nos produits</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
@@ -98,7 +98,7 @@
     </section>
 
     <!-- Nos clients -->
-    <section>
+    <section id="nosClients">
         <h3>Nos clients</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
@@ -116,7 +116,7 @@
     </section>
 
     <!-- Nous trouver -->
-    <section>
+    <section id="nousTrouver"> 
         <h3>Nous trouver</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
