style css continuer

--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- nom du site . apparaitra dans l'onglet -->
     <title>La ruche</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <!-- l'ensemble visible par le visiteur de notre site -->
 <body>
@@ -44,7 +45,7 @@
 
     <!-- Engagements -->
     <section id="engagements">
-        <h3>Nos engagements</h3>
+        <h3 class="bleu">Nos engagements</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
             Sapiente itaque quia fuga laborum. Omnis, temporibus commodi provident ipsa inventore saepe quos! Adipisci facilis accusamus, sed, a fugiat illo deleniti repellendus porro itaque iusto officiis vitae unde quasi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque ex optio molestias aliquid iusto dolore ipsa repudiandae quidem, sequi consequuntur? Nulla saepe sapiente repudiandae dolorem necessitatibus maxime id eligendi vitae.
@@ -63,7 +64,7 @@
 
     <!-- Bienfaits -->
     <section id="bienfaits">
-        <h3>Nos bienfaits</h3>
+        <h3 class="jaune">Nos bienfaits</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
             Sapiente itaque quia fuga laborum. Omnis, temporibus commodi provident ipsa inventore saepe quos! Adipisci facilis accusamus, sed, a fugiat illo deleniti repellendus porro itaque iusto officiis vitae unde quasi aliquid! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati vero tempora ad ea minima, porro, officia quam iure assumenda quidem quas ipsum facere consectetur a quos, quis suscipit officiis consequuntur.
@@ -81,7 +82,7 @@
 
     <!-- Produits -->
     <section id="nosProduits">
-        <h3>Nos produits</h3>
+        <h3 class="bleu">Nos produits</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
             Sapiente itaque quia fuga laborum. Omnis, temporibus commodi provident ipsa inventore saepe quos! Adipisci facilis accusamus, sed, a fugiat illo deleniti repellendus porro itaque iusto officiis vitae unde quasi aliquid! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, mollitia sed repellendus praesentium quis accusamus aut, maiores hic tenetur doloribus error totam pariatur esse eos eum, expedita perferendis. Laudantium, vel.
@@ -99,7 +100,7 @@
 
     <!-- Nos clients -->
     <section id="nosClients">
-        <h3>Nos clients</h3>
+        <h3 class="jaune">Nos clients</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
             Sapiente itaque quia fuga laborum. Omnis, temporibus commodi provident ipsa inventore saepe quos! Adipisci facilis accusamus, sed, a fugiat illo deleniti repellendus porro itaque iusto officiis vitae unde quasi aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur temporibus voluptate consequuntur commodi assumenda deserunt quaerat error quia doloribus, nobis, praesentium, aliquam sunt soluta voluptatum cum quos laborum dolor quod?
@@ -117,7 +118,7 @@
 
     <!-- Nous trouver -->
     <section id="nousTrouver"> 
-        <h3>Nous trouver</h3>
+        <h3 class="bleu">Nous trouver</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex officiis distinctio aliquid, excepturi porro dignissimos, reiciendis alias quia, maiores sequi similique. Veritatis in eos sint inventore voluptatum possimus necessitatibus quidem.
             Delectus, voluptates explicabo error magni quisquam minima quam perferendis nostrum eligendi rerum! Sequi ea sed dolorem rerum aliquid tenetur dicta odit necessitatibus, aliquam voluptatem quam magni? Inventore eum perferendis consequuntur?
             Sapiente itaque quia fuga laborum. Omnis, temporibus commodi provident ipsa inventore saepe quos! Adipisci facilis accusamus, sed, a fugiat illo deleniti repellendus porro itaque iusto officiis vitae unde quasi aliquid! Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores excepturi rerum nihil, molestiae nobis tenetur sunt eos praesentium magni ratione aperiam explicabo, consequuntur hic ipsam. Magnam, sit. Accusamus, itaque?
